[package]
name = "soldout"
version = "0.1.0"
authors = ["nandhika <nandhika.wph@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
console = "0.13.0"
tokio = { version = "0.2", features = ["macros"] }
diesel = { version = "1.4.4", features = ["mysql","r2d2","chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }

serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"

lazy_static = "1.4.0"
